# locker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/include/: attrs.h  locker.h  locker_crypto.h  locker_db.h  locker_logs.h  locker_stringutils.h  locker_tui.h  locker_tui_utils.h  locker_utils.h  locker_version.h
src/libsodium/lib/: libsodium.26.dylib  libsodium.la
src/libsodium/lib/pkgconfig/: libsodium.pc
src/locker/: crypto.c  db.c  locker.c  logs.c  main.c  stringutils.c  tui.c  tui_utils.c
src/ncurses/include/ncursesw/: term.h
src/ncurses/lib/: libformw.6.dylib  libmenuw.6.dylib  libncursesw.6.dylib  libpanelw.6.dylib  libtinfow.6.dylib
